corpus/c/type/case-01/snapshots/gcc15/render.ci.txt
src/main.c:5:22: error: type or overload mismatch
help: compare the expected type and actual argument at the call site
why: passing argument 1 of 'takes_int' makes integer from pointer without a cast
| src/main.c:5:22
|     return takes_int(value);
|                      ^
because: expected 'int' but argument is of type 'const char *'
other errors:
  - src/main.c:5:22: error: type or overload mismatch
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output